--- a/default/data/ui/views/3_oscam_channels_decoded.xml
+++ b/default/data/ui/views/3_oscam_channels_decoded.xml
@@ -1,13 +1,10 @@
 <form>
-  <label>3. OSCam Channels decoded</label>
-  <description>Show what channels are decoded or not decoded, sorted by number of hits and by clients.</description>
-  <fieldset submitButton="false" autoRun="true">
+  <label>3. OSCam Channels Usage Timeline</label>
+  <description>What channels are your client looking at? Drill down and you will see.</description>
+  <fieldset autoRun="true" submitButton="false">
     <input type="time" token="global_time" searchWhenChanged="true">
       <label>Time frame</label>
-      <default>
-        <earliest>rt-1h</earliest>
-        <latest>rt</latest>
-      </default>
+      <default>Last 24 hours</default>
     </input>
     <input type="dropdown" token="Host" searchWhenChanged="true">
       <search>
@@ -21,8 +18,23 @@
       <fieldForValue>host</fieldForValue>
       <default>*</default>
     </input>
+    <input type="dropdown" token="Client" searchWhenChanged="true">
+      <search>
+        <query>sourcetype=oscam
+          client="*"
+          host=$Host$ |
+          top limit=0 client |
+          sort client</query>
+        <earliest>$global_time.earliest$</earliest>
+        <latest>$global_time.latest$</latest>
+      </search>
+      <choice value="*">Any</choice>
+      <fieldForLabel>client</fieldForLabel>
+      <fieldForValue>client</fieldForValue>
+      <default>*</default>
+    </input>
     <input type="dropdown" token="Server" searchWhenChanged="true">
-      <label>Reader/Proxy/Server</label>
+      <label>Reader/Proxy(Server)</label>
       <search>
         <query>sourcetype=oscam
           server="*"
@@ -36,95 +48,68 @@
       <fieldForValue>server</fieldForValue>
       <default>*</default>
     </input>
+    <input type="dropdown" token="Span" searchWhenChanged="true">
+      <label>Time span</label>
+      <default>10</default>
+      <choice value="1">1 min</choice>
+      <choice value="5">5 min</choice>
+      <choice value="10">10 min</choice>
+      <choice value="20">20 min</choice>
+      <choice value="60">1 hour</choice>
+      <choice value="120">2 hour</choice>
+    </input>
+    <input type="dropdown" token="found" searchWhenChanged="true">
+      <label>Found/not Found ecm?</label>
+      <choice value="oscam_status-*found">Both</choice>
+      <choice value="oscam_status-found">Only found</choice>
+      <choice value="oscam_status-notfound">Only not found</choice>
+      <default>oscam_status-*found</default>
+    </input>
+    <input type="dropdown" token="split" searchWhenChanged="true">
+      <label>Show server/host</label>
+      <default>""</default>
+      <choice value="&quot;&quot;">no</choice>
+      <choice value="&quot; [&quot;. server.&quot;@&quot;.host.&quot;]&quot;">yes</choice>
+    </input>
   </fieldset>
   <row>
     <panel>
       <chart>
-        <title>Channels decoded</title>
         <search>
           <query>sourcetype=oscam
-            ecm=found OR ecm=cache*
             host=$Host$
-            server=$Server$ |
-            chart count over channel by client |
-            addtotals fieldname=Total |
-            table channel Total * |
-            sort - Total |
-            head 10 |
-            fields - Total</query>
+            client=$Client$
+            server=$Server$
+            eventtype="$found$" |
+            eval channel = if(isnull(channel), sid.":".caid."@".pvid.$split$, channel.$split$) |
+            timechart span=$Span$m count by channel limit=20</query>
           <earliest>$global_time.earliest$</earliest>
           <latest>$global_time.latest$</latest>
         </search>
-        <option name="charting.chart">bar</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
-        <option name="charting.axisTitleX.visibility">collapsed</option>
-        <option name="charting.axisTitleY.visibility">collapsed</option>
+        <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">area</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
         <option name="charting.chart.nullValueMode">gaps</option>
         <option name="charting.chart.showDataLabels">none</option>
         <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
-        <option name="charting.chart.stackMode">stacked</option>
+        <option name="charting.chart.stackMode">default</option>
         <option name="charting.chart.style">shiny</option>
         <option name="charting.drilldown">all</option>
+        <option name="height">600</option>
         <option name="charting.layout.splitSeries">0</option>
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-        <option name="height">400</option>
-      </chart>
-    </panel>
-    <panel>
-      <chart>
-        <title>Channels not decoded</title>
-        <search>
-          <query>sourcetype=oscam
-            ecm=*
-            ecm!=found
-                ecm!=cache*
-            ecm!=expdate
-            host=$Host$
-            server=$Server$ |
-            chart count over channel by client |
-            addtotals fieldname=Total |
-            table channel Total * |
-            sort - Total |
-            head 10 |
-            fields - Total</query>
-          <earliest>$global_time.earliest$</earliest>
-          <latest>$global_time.latest$</latest>
-        </search>
-        <option name="charting.chart">bar</option>
-        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
-        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
-        <option name="charting.axisTitleX.visibility">collapsed</option>
-        <option name="charting.axisTitleY.visibility">collapsed</option>
-        <option name="charting.axisTitleY2.visibility">visible</option>
-        <option name="charting.axisX.scale">linear</option>
-        <option name="charting.axisY.scale">linear</option>
-        <option name="charting.axisY2.enabled">0</option>
-        <option name="charting.axisY2.scale">inherit</option>
-        <option name="charting.chart.bubbleMaximumSize">50</option>
-        <option name="charting.chart.bubbleMinimumSize">10</option>
-        <option name="charting.chart.bubbleSizeBy">area</option>
-        <option name="charting.chart.nullValueMode">gaps</option>
-        <option name="charting.chart.showDataLabels">none</option>
-        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
-        <option name="charting.chart.stackMode">stacked</option>
-        <option name="charting.chart.style">shiny</option>
-        <option name="charting.drilldown">all</option>
-        <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
-        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
-        <option name="height">400</option>
       </chart>
     </panel>
   </row>
