--- a/default/data/ui/views/5_oscam_clients_ecm_requests.xml
+++ b/default/data/ui/views/5_oscam_clients_ecm_requests.xml
@@ -1,11 +1,11 @@
 <form>
-  <label>5. OSCam Clients ecm requests</label>
-  <description>Ecm request sorted by hits of Client and by Reader/Proxy(Server) or Channels.</description>
-  <fieldset submitButton="false">
+  <label>5. OSCam Channels decoded</label>
+  <description>Show what channels are decoded or not decoded, sorted by number of hits and by clients.</description>
+  <fieldset submitButton="false" autoRun="true">
     <input type="time" token="global_time" searchWhenChanged="true">
       <label>Time frame</label>
       <default>
-        <earliest>rt-5m</earliest>
+        <earliest>rt-1h</earliest>
         <latest>rt</latest>
       </default>
     </input>
@@ -13,35 +13,53 @@
       <search>
         <query>sourcetype=oscam |
           top host</query>
-        <earliest>-24h@h</earliest>
-        <latest>now</latest>
+        <earliest>$global_time.earliest$</earliest>
+        <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
       <fieldForLabel>host</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <default>*</default>
     </input>
-    <input type="radio" token="by" searchWhenChanged="true">
-      <label>Sort by</label>
-      <choice value="channel">Channels</choice>
-      <choice value="server">Reader/Proxy(Server)</choice>
-      <default>channel</default>
+    <input type="dropdown" token="Server" searchWhenChanged="true">
+      <label>Reader/Proxy/Server</label>
+      <search>
+        <query>sourcetype=oscam
+          server="*"
+          host=$Host$ |
+          top limit=0 server</query>
+        <earliest>$global_time.earliest$</earliest>
+        <latest>$global_time.latest$</latest>
+      </search>
+      <choice value="*">Any</choice>
+      <fieldForLabel>server</fieldForLabel>
+      <fieldForValue>server</fieldForValue>
+      <default>*</default>
     </input>
   </fieldset>
   <row>
     <panel>
       <chart>
-        <title>ecm request last $global_time.earliest$ by client</title>
+        <title>Channels decoded</title>
         <search>
-          <query>sourcetype=oscam             ecm=found OR ecm=cache*              host=$Host$ |             chart count over client by $by$ |             addtotals fieldname=Total |             table client Total * |             sort - Total |             head 10 |              fields - Total</query>
+          <query>sourcetype=oscam
+            ecm=found OR ecm=cache*
+            host=$Host$
+            server=$Server$ |
+            chart count over channel by client |
+            addtotals fieldname=Total |
+            table channel Total * |
+            sort - Total |
+            head 10 |
+            fields - Total</query>
           <earliest>$global_time.earliest$</earliest>
           <latest>$global_time.latest$</latest>
         </search>
         <option name="charting.chart">bar</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
-        <option name="charting.axisTitleX.visibility">visible</option>
-        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.axisTitleY.visibility">collapsed</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
@@ -60,6 +78,53 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="height">400</option>
+      </chart>
+    </panel>
+    <panel>
+      <chart>
+        <title>Channels not decoded</title>
+        <search>
+          <query>sourcetype=oscam
+            ecm=*
+            ecm!=found
+                ecm!=cache*
+            ecm!=expdate
+            host=$Host$
+            server=$Server$ |
+            chart count over channel by client |
+            addtotals fieldname=Total |
+            table channel Total * |
+            sort - Total |
+            head 10 |
+            fields - Total</query>
+          <earliest>$global_time.earliest$</earliest>
+          <latest>$global_time.latest$</latest>
+        </search>
+        <option name="charting.chart">bar</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.axisTitleY.visibility">collapsed</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.showDataLabels">none</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">stacked</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">all</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.placement">right</option>
+        <option name="height">400</option>
       </chart>
     </panel>
   </row>
